--- a/css/home.css
+++ b/css/home.css
@@ -8,7 +8,7 @@
 .header{
     width: 100%;
     height: 100vh;
-    background-image: linear-gradient(rgba(0, 131, 136, 0.5),rgba(0, 131, 136, 0.5)),url(E:\No_Poverty_with_Digital_Enterpronurship\images\poverty.jpeg);
+    background-image: linear-gradient(rgba(0, 131, 136, 0.5),rgba(0, 131, 136, 0.5));
     background-position: center;
     background-size: cover;
     overflow-x: hidden;
@@ -76,4 +76,25 @@ nav:hover ul li a{
 }
 p.slide-left{
     animation-delay: 1s;
+}
+.banner-area{
+    background-image: linear-gradient(rgba(0, 131, 136, 0.5),rgba(0, 131, 136, 0.5)),url(../images/poverty.jpeg);
+    background-size: cover;
+    top: 100px;
+    height: 100vh;
+    width: 100%;
+    position: fixed;
+
+}
+.banner-area::after{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: block;
+    width: 100%;
+    height: 100%;
+    opacity: -7;
+    z-index: -1;
+
 }
