--- a/Forgot password  page.css
+++ b/Forgot password  page.css
@@ -24,7 +24,7 @@ div.main{
 }
 
 input#submit{
-	width: 200px;
+	width: 120px;
 	padding: 7px;
 	font-size: 16px;
 	font-family: sans-serif;
@@ -40,4 +40,13 @@ input#submit{
 }
 .form{
 	font-colo"r: white;
+}
+input#name{
+	width: 300px;
+	border: 1px solid #ddd;
+	border-radius: 3px;
+	outline: 0;
+	padding: 7px;
+	background-color: #fff;
+	box-shadow: inset 1px 1px 5px0 rgba(0,0,0,0.3);
 }
